--- a/web/src/client/app/app.styl
+++ b/web/src/client/app/app.styl
@@ -19,10 +19,11 @@ body {
   font-family 'Segoe UI', 'Lucida Grande','Ubuntu','sans-serif'
   font-size 16px
   line-height 1.5
+  margin: 0
 }
 
 #app
-  margin 1em 2em
+  margin 0
 
   > header
     h1
@@ -34,47 +35,3 @@ body {
   > footer
     font-size .75em
     font-style italic
-
-  :focus
-    outline-style none
-
-  a
-    color #346392
-    text-decoration none
-
-    &:hover:not(.active)
-      text-decoration underline
-
-    &.active
-      font-weight bold
-
-  button
-    background-color #6496c8
-    border none
-    border-radius 1em
-    color #fff
-    font-weight bold
-    line-height 1.8
-    margin 0 10px 0 0
-    padding 0 1em
-    text-shadow -1px 1px #417cb8
-
-    &[disabled]
-      opacity .5
-
-    &:hover:not(&[disabled])
-      background-color #346392
-      text-shadow -1px 1px #27496d
-
-    &:active
-      background-color #27496d
-      text-shadow -1px 1px #193047
-
-  button
-  input
-  textarea
-    &:disabled
-      opacity .5
-
-  p, li
-    max-width 42em
