--- a/web/src/client/app/app.styl
+++ b/web/src/client/app/app.styl
@@ -1,6 +1,6 @@
 // Remember to use rems and ems. http://css-tricks.com/rems-ems.
 
-@import '../../../node_modules/normalize.css/normalize.css'
+//@import '../../../node_modules/normalize.css/normalize.css'
 
 // http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
 *
@@ -21,6 +21,8 @@ body {
   line-height 1.5
   margin: 0
 }
+  .page
+    padding-top 40px
 
 #app
   margin 0
