Add Brainfock logo watermark to the bottom of a page

--- a/web/src/less/main.less
+++ b/web/src/less/main.less
@@ -51,7 +51,10 @@
 @import "components/notifications.less";
 //@import "components/dropdown.less";
 
-
+body {
+  background: url(/assets/img/logo_white_bg.png) 50% 100% no-repeat;
+  background-size: 20%;
+}
 
 h1,h2,h3,h4,h5 {
   font-family: "Segoe UI Light","Helvetica Neue","Segoe UI","Segoe WP",sans-serif;
