--- a/src/less/main.less
+++ b/src/less/main.less
@@ -53,7 +53,7 @@
 
 body {
   background: url(/assets/img/logo_white_bg.png) 50% 100% no-repeat;
-  background-size: 10%;
+  background-size: 64px;
 }
 
 h1,h2,h3,h4,h5 {
