--- a/src/less/pages/wiki.less
+++ b/src/less/pages/wiki.less
@@ -1,19 +1,24 @@
 .wiki-wrapper {
-   padding: 0 20px 20px 20px;
-
+  padding: 0 20px 20px 20px;
+  a {
+    text-decoration: underline;
+  }
   .wiki-page {
-     padding-bottom: @app-bar-height;
-     a.nonexisting {
+    padding-bottom: @app-bar-height;
+
+     a.non-existing {
+       border-bottom: 0.07em dashed #CF0000;
        color: #CF0000;
+       text-decoration: none;
      }
    }
   .footer {
-    padding: 20px;
     background: #F4F4F4;
-    font-size: 11px;
-    position: fixed;
     bottom: 0;
+    font-size: 0.9em;
     left: 0;
+    padding: 20px;
+    margin: -20px;
     right: 0;
   }
  }
