Tweak login form UI adding more contrast

--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -1,6 +1,11 @@
 .login
-  form
-    width 20em
+  .formWrapper
+    padding: 2em
+    background: #FDFDFD
+
+  .headline
+    text-align: center
+    padding: 20px 0
 
   input
     width 100%
