Tweak login form UI and add link to reset password page

--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -7,6 +7,10 @@
     text-align: center
     padding: 20px 0
 
+  .reset-link
+    float: right
+    padding: 1em 0 0 0
+
   input
     width 100%
     margin .25em
