Add Brainfock logo to login page

--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -7,6 +7,14 @@
     text-align: center
     padding: 20px 0
 
+    .brand
+      text-indent: -10000px;
+      background-image: url(/assets/img/logo_white_bg.png);
+      height: 3em;
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: 25%;
+
   .reset-link
     float: right
     padding: 1em 0 0 0
